--- a/styles.css
+++ b/styles.css
@@ -21,14 +21,14 @@ body {
     font-weight: 300;
 }
 
-.container {
+.contenedor {
     width: 100%;
     height: calc(100vh - 100px);
     display: flex;
     justify-content: center;
 }
 
-.container .div-formulario {
+.contenedor .div-formulario {
     width: 40%;
     height: 250px;
     margin: 15px 15px;
@@ -42,13 +42,13 @@ body {
 
 }
 
-.container .div-formulario h2{
+.contenedor .div-formulario h2{
     margin-top: 10px;
     font-weight: 300;
     font-size: 2em;
     color: aquamarine;
 }
-.container .div-formulario form {
+.contenedor .div-formulario form {
     width: 100%;
     height: 100%;
     display: flex;
@@ -57,17 +57,17 @@ body {
     align-items: center;
 }
 
-.container .div-formulario form input,
-.container .div-formulario form button {
+.contenedor .div-formulario form input,
+.contenedor .div-formulario form button {
     width: 60%;
     padding: 10px 10px;
     margin: 10px 10px;
 }
 
 /* EStilos lisatdo*/
-.container .div-list {
+.contenedor .div-listado {
     width: 55%;
-    height: calc(100% - 50%);
+    height: calc(100% - 50px);
     margin: 15px 15px;
     background-color: rgb(28, 149, 158);
     display: flex;
@@ -77,14 +77,14 @@ body {
     box-shadow: 10px 10px rgb(0, 0, 0, 0.3 );
 }
 
-.container .div-list h2{
+.contenedor .div-listado h2{
     margin-top: 10px;
     font-weight: 300;
     font-size: 2em;
     color: maroon;
 }
 
-.container .div-list .div-empleados {
+.contenedor .div-listado .div-empleados {
     width: 100%;
     height: 100%;
     display: flex;
@@ -94,7 +94,7 @@ body {
     padding: 0 30px;
 }
 
-.container .div-list .div-empleados p{
+.contenedor .div-listado .div-empleados p{
     margin: 10px 0;
     font-size: 1em;
     color: #ddd;
